--- a/index.html
+++ b/index.html
@@ -22,24 +22,35 @@
 </head>
 
 <body>
-  <header></header>
-  <main class="main">
-    <div class="search-field">
-      <div class="search-box">
-        <input id="input-field" class="search-field" type="text" />
-        <button type="button" class="btn btn-primary search-button" data-toggle="button" aria-pressed="false"
-          autocomplete="off" id="search-btn" onclick="loadProducts()">
-          Search
-        </button>
-      </div>
-    </div>
+  <header>
+    <br>
     <div class="row">
-      <div class="col-md-9 col-lg-9 col-sm-7">
+      <div class="col-xs-3 col-md-3 col-lg-3 col-sm-1"></div>
+      <div class="col-xs-6 col-md-6 col-lg-6 col-sm-10">
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="Search" id="txtSearch"/>
+          <div class="input-group-btn">
+            <button class="btn btn-primary" type="submit">
+              <span class="glyphicon glyphicon-search"></span>
+              Search
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-3 col-md-3 col-lg-3 col-sm-1"></div>
+    <!-- </div> -->
+  <!-- </div> -->
+</div>
+  </header>
+  <br>
+  <main class="main container-fluid">
+    <div class="row">
+      <div class="col-md-9 col-lg-9 col-sm-8">
         <div id="all-products" class="">
         </div>
       </div>
-      <div class="col-md-3 col-lg-3 col-sm-5 cart-main">
-        <div class="cart" id="my-cart">
+      <div class="col-md-3 col-lg-3 col-sm-4 cart-main">
+        <div class="cart container-fluid" id="my-cart">
           <table class="table">
             <thead>
               <h1>My-Cart</h1>
