--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <body>
   <header>
     <br>
+    <!-- Search Input -->
     <div class="row">
       <div class="col-xs-3 col-md-3 col-lg-3 col-sm-1"></div>
       <div class="col-xs-6 col-md-6 col-lg-6 col-sm-10">
@@ -38,17 +39,17 @@
         </div>
       </div>
       <div class="col-xs-3 col-md-3 col-lg-3 col-sm-1"></div>
-    <!-- </div> -->
-  <!-- </div> -->
 </div>
   </header>
   <br>
   <main class="main container-fluid">
     <div class="row">
+      <!-- Show Products -->
       <div class="col-md-9 col-lg-9 col-sm-8">
         <div id="all-products" class="">
         </div>
       </div>
+      <!-- Cart -->
       <div class="col-md-3 col-lg-3 col-sm-4 cart-main">
         <div class="cart container-fluid" id="my-cart">
           <table class="table">
